--- a/DataExtraction.ipynb
+++ b/DataExtraction.ipynb
@@ -57,12 +57,12 @@
     "    filelist=file.readlines()\n",
     "    \n",
     "    \n",
-    "    \n",
-    "    temp=filelist[3].find('Beam') #First extracting beam information, since it is just a 1 time thing\n",
-    "    BMaj=float(filelist[3][temp+4:temp+9])\n",
-    "    BMin=float(filelist[3][temp+11:temp+15])\n",
-    "    temp=filelist[3].find('Pix')\n",
-    "    Pixsize=float(filelist[3][temp+3:temp+8])\n",
+    "    #print(filelist[0:19])\n",
+    "    temp=filelist[7].find('Beam') #First extracting beam information, since it is just a 1 time thing\n",
+    "    BMaj=float(filelist[7][temp+4:temp+9])\n",
+    "    BMin=float(filelist[7][temp+11:temp+15])\n",
+    "    temp=filelist[7].find('Pix')\n",
+    "    Pixsize=float(filelist[7][temp+3:temp+8])\n",
     "    BeamAreaPix=(BMaj * BMin * np.pi)/(Pixsize**2)\n",
     "    \n",
     "    if verbose==True:\n",
@@ -75,11 +75,11 @@
     "    \n",
     "    if verbose==True:\n",
     "        print(filepath, 'sucessfully read')\n",
-    "        print(int(len(filelist)/18), ' models were compared')\n",
+    "        print(((len(filelist)+1)/19), ' models were compared')\n",
     "        \n",
-    "    for i in range(int(len(filelist)/18)): #Main loop, gpes through output file in groups of 18 lines and collects the data\n",
+    "    for i in range(int((len(filelist)+1)/19)): #Main loop, gpes through output file in groups of 19 lines and collects the data\n",
     "    \n",
-    "        tempname=filelist[i*18+3] #Starts with model cube\n",
+    "        tempname=filelist[i*19+7] #Starts with model cube name\n",
     "        HelpfulReference=tempname.find('/'+objectname+'-Vsys')+len(objectname) #Just a nice index to start at the actual filename\n",
     "        j=0\n",
     "    \n",
@@ -116,12 +116,12 @@
     "\n",
     "        #Finished with cube filename stuff, now onto outputs\n",
     "    \n",
-    "        NormCList.append(float(filelist[i*18+5][-12:]))\n",
-    "        AllChi2List.append(float(filelist[i*18+8][-12:]))\n",
-    "        AllReducedChi2List.append(float(filelist[i*18+9][-12:]))\n",
-    "        ThresholdChi2List.append(float(filelist[i*18+12][-12:]))\n",
-    "        ThresholdReducedChi2List.append(float(filelist[i*18+13][-12:]))\n",
-    "        ThresholdNumCellsList.append(float(filelist[i*18+11][36:]))\n",
+    "        NormCList.append(float(filelist[i*19+9][-12:]))\n",
+    "        AllChi2List.append(float(filelist[i*19+12][-12:]))\n",
+    "        AllReducedChi2List.append(float(filelist[i*19+13][-12:]))\n",
+    "        ThresholdChi2List.append(float(filelist[i*19+16][-12:]))\n",
+    "        ThresholdReducedChi2List.append(float(filelist[i*19+17][-12:]))\n",
+    "        ThresholdNumCellsList.append(float(filelist[i*19+15][36:]))\n",
     "        ThresholdNumCellsOverBeamAreaList.append(float(ThresholdNumCellsList[i] / BeamAreaPix))\n",
     "      \n",
     "    if verbose==True:\n",
@@ -131,6 +131,9 @@
     "    TableTemp=pd.DataFrame([Cubename, MassList, RotationList, RinList, RoutList, RcbList, NormCList, AllChi2List, AllReducedChi2List, ThresholdChi2List, ThresholdReducedChi2List, ThresholdNumCellsList, ThresholdNumCellsOverBeamAreaList])\n",
     "    Table=TableTemp.T\n",
     "    Table.columns = ['Cube Name','Mass', 'RotationDirection', 'Rin', 'Rout', 'CB', 'Normalization Constant', 'Chi2', 'Reduced Chi2', 'Threshold Chi2','Threshold Reduced Chi2', 'ThresholdNumCells', 'ThresholdNumCellsOverBeamArea']\n",
+    "    Table.insert(6, 'IRE?', Table['CB']==Table['Rin'])\n",
+    "    Table.insert(7, 'Keplerian?', Table['CB']==Table['Rout'])\n",
+    "    Table.insert(8, 'Blended?', ~(Table['IRE?'] | Table['Keplerian?']))\n",
     "    pd.set_option('display.max_columns', 10000) #replace n with the number of columns you want to see completely\n",
     "    pd.set_option('display.max_rows', 10000)\n",
     "    #display(Table)\n",
@@ -147,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ConvertDatafromeToCSV(Dataframe, filepath, verbose=False):\n",
+    "def ConvertDataframeToCSV(Dataframe, filepath, verbose=False):\n",
     "    '''\n",
     "    This simple function will take a pandas Dataframe, and write it out as a csv.\n",
     "    --------------------------------------------\n",
@@ -249,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,6 +299,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BMin= 0.294\n",
+      "BMaj= 0.448\n",
+      "Pixsize= 0.054\n",
+      "BeamAreaPix= 141.9017323695538\n",
+      "../../../../Downloads/B5-IRS1_test_bigger_grid_CBmin1.out sucessfully read\n",
+      "5430.0  models were compared\n",
+      "File sucessfully extracted\n",
+      "File sucessfully converted to dataframe\n"
+     ]
+    }
+   ],
+   "source": [
+    "#This is for the model remakes we did in July 2025. Just 1 big outfile and I need to add 3 columns for bools for \n",
+    "#IRE, Keplerian, and Blended\n",
+    "\n",
+    "OutputTable = ConvertOutputToDataframe('../../../../Downloads/B5-IRS1_test_bigger_grid_CBmin1.out', 'B5-IRS1', True)\n",
+    "# OutputTable\n",
+    "ConvertDataframeToCSV(OutputTable, 'B5-IRS1_NewBatch.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../../../../Downloads\\\\B5-IRS1_test_bigger_grid.out']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glob.glob('../../../../Downloads/B5-IRS1_test_bigger_grid*')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -318,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
